Finished Design and style

--- a/ticTackToe.html
+++ b/ticTackToe.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tack Toe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./ticTackToe.css">
 </head>
 
@@ -22,7 +28,7 @@
     </div>
     <div id="Defeat">
         <div id="Defeat-content">
-            <h3>Defeat</h3>
+            <h3 class="Def">Defeat</h3>
             <div class="button-container">
                 <button id="Restart1">Restart</button>
             </div>
@@ -30,7 +36,7 @@
     </div>
     <div id="draw">
         <div id="draw-content">
-            <h3>Draw</h3>
+            <h3 class="draw">Draw</h3>
             <div class="button-container">
                 <button id="Restart2">Restart</button>
             </div>
@@ -38,7 +44,7 @@
     </div>
     <div id="Victory">
         <div id="Victory-content">
-            <h3>Victory</h3>
+            <h3 class="Vic">Victory</h3>
             <div class="button-container">
                 <button id="Restart3">Restart</button>
             </div>
