--- a/ticTackToe.html
+++ b/ticTackToe.html
@@ -16,6 +16,7 @@
 
 <body>
     <div class="container">
+        <!--  Board -->
         <div class="div" id="topL"></div>
         <div class="div" id="topM"></div>
         <div class="div" id="topR"></div>
@@ -26,6 +27,7 @@
         <div class="div" id="bottomM"></div>
         <div class="div" id="bottomR"></div>
     </div>
+    <!-- Banners -->
     <div id="Defeat">
         <div id="Defeat-content">
             <h3 class="Def">Defeat</h3>
