--- a/ticTackToe.html
+++ b/ticTackToe.html
@@ -1,59 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>X O</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./ticTackToe.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./ticTackToe.css" />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <!--  Board -->
-        <div class="div" id="topL"></div>
-        <div class="div" id="topM"></div>
-        <div class="div" id="topR"></div>
-        <div class="div" id="middleL"></div>
-        <div class="div" id="middleM"></div>
-        <div class="div" id="middleR"></div>
-        <div class="div" id="bottomL"></div>
-        <div class="div" id="bottomM"></div>
-        <div class="div" id="bottomR"></div>
+      <!--  Board -->
+      <div class="div" id="topL"></div>
+      <div class="div" id="topM"></div>
+      <div class="div" id="topR"></div>
+      <div class="div" id="middleL"></div>
+      <div class="div" id="middleM"></div>
+      <div class="div" id="middleR"></div>
+      <div class="div" id="bottomL"></div>
+      <div class="div" id="bottomM"></div>
+      <div class="div" id="bottomR"></div>
     </div>
     <!-- Banners -->
     <div id="Defeat">
-        <div id="Defeat-content">
-            <h3 class="Def">Defeat</h3>
-            <div class="button-container">
-                <button id="Restart1">Restart</button>
-            </div>
+      <div id="Defeat-content">
+        <h3 class="Def">Defeat</h3>
+        <div class="button-container">
+          <button id="Restart1">Restart</button>
         </div>
+      </div>
     </div>
     <div id="draw">
-        <div id="draw-content">
-            <h3 class="draw">Draw</h3>
-            <div class="button-container">
-                <button id="Restart2">Restart</button>
-            </div>
+      <div id="draw-content">
+        <h3 class="draw">Draw</h3>
+        <div class="button-container">
+          <button id="Restart2">Restart</button>
         </div>
+      </div>
     </div>
     <div id="Victory">
-        <div id="Victory-content">
-            <h3 class="Vic">Victory</h3>
-            <div class="button-container">
-                <button id="Restart3">Restart</button>
-            </div>
+      <div id="Victory-content">
+        <h3 class="Vic">Victory</h3>
+        <div class="button-container">
+          <button id="Restart3">Restart</button>
         </div>
+      </div>
     </div>
 
     <script src="./ticTackToe.js"></script>
-</body>
-
+  </body>
 </html>
